[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["drsmile1001 <drsmile.1001@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
sqlalchemy = "^2.0.2"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
